--- a/ConfigFiles/ClinicalBQBuild.yaml
+++ b/ConfigFiles/ClinicalBQBuild.yaml
@@ -1,5 +1,5 @@
 #
-# YAML Configuration file used for script build_clinical_data_bq_table.py
+# YAML Configuration file used for script build_gdc_api_clinical_bulk_table.py
 # Builds BQ table for clinical data.
 #
 
@@ -97,8 +97,8 @@ steps:
   # Note that although the steps are given in the actual order here as
   # a list, changing the order here does not change the order of execution, which is fixed.
 
-  - build_and_upload_case_jsonl
+  # - build_and_upload_case_jsonl
 
-  - create_schema
+  # - create_schema
 
-  - build_bq_table
+  # - build_bq_table
