--- a/ConfigFiles/CDAClinicalBQBuildGDC.yaml
+++ b/ConfigFiles/CDAClinicalBQBuildGDC.yaml
@@ -1,6 +1,6 @@
 #
 # YAML Configuration file used for script transform_tables_clinical_gdc.py
-# Builds BQ program-level tables for CDA-GDC clinical data.
+# Builds BQ program-level tables for CDA_old-GDC clinical data.
 #
 
 version: 1
